# aoc_2024

./: README.md  pyproject.toml
solutions/: 1.py  3.py  4.py
utils/: config.py
