[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = ""
authors = ["Julius Welzel <julius.welzel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
